# yandex_practicum_project_work_module_4

./: Cargo.toml  README.md
blur_plugin/: Cargo.toml
blur_plugin/src/: lib.rs
common/src/: lib.rs
image_processor/: Cargo.toml
image_processor/src/: error.rs  lib.rs  main.rs  plugin_loader.rs
mirror_plugin/: Cargo.toml
mirror_plugin/src/: lib.rs
